--- a/less/variables.less
+++ b/less/variables.less
@@ -17,4 +17,5 @@
 @low-priority-done: desaturate(lighten(@low-priority, 20%), 32%);
 @normal-priority-done: desaturate(lighten(@normal-priority, 20%), 32%);
 @high-priority-done: desaturate(lighten(@high-priority, 20%), 32%);
+@list-counter-size: 43px;
 /* -------------------------------------------------- */
